PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Initial commit of basic tracker page

Phoronix Test Suite 5.4.1-Lipki
23 December 2014

- pts-core: Update AppData and systemd service files
- pts-core: Add csv-dump-frame-latencies support to result parser
- phoromatic: Improve formatting of result strings when merging random result files together
- phoromatic: Add enterprise-setup sub-command
- phoromatic: Attempt to detect and report IP address next to requested MAC address claim on the system claim page

Phoronix Test Suite 5.4.0-Lipki
9 December 2014

- phoromatic: Main page update
- phoromatic: Various updates

Phoronix Test Suite 5.4 Milestone 7
1 December 2014

- pts-core: Improve MAC address acquisition on systems with multiple NICs
- phoromatic: Add add_new_users_to_account option for adding new users automatically to existing account
- phoromatic: Allow changing the admin level for users by the main administrator from the Users page
- phoromatic: Report systems MAC address from the systems page
- phoromatic: Report network's Wake-On-LAN information to Phoromatic Server
- phoromatic: Add notification option to email to users when systems appear hung for more than an hour
- phoromatic: Add option to power off systems when no more scheduled tests are scheduled for the day
- phoromatic: Add option to network wake on lan (WoL) systems when needed for testing
- phoromatic: Allow logging of Phoromatic set user context execution
- phoromatic: Add support for viewing system logs from the result page link on right hand side
- phoromatic: Support for disabling accounts via rootadmin
- phoromatic: Track elapsed time during the testing process, report to Phoromatic Server
- phoromatic: Allow Phoromatic Servers to be specified via a simple text file at PTS_USER_PATH/phoromatic-servers
- phoromatic: Add "configure Phoromatic client via SSH" to Phoromatic Server
- phoromatic: Allow IP/MAC based system claiming from Phoromatic Server UI